fix: adjust gap on footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,7 @@
     @apply max-w-[1200px] px-4 lg:px-0;
   }
 }
+
+.half-background {
+  @apply;
+}
